[tool.poetry]
name = "metagpt-ja"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.*"
aiohttp = "^3.9.5"
channels = "^4.1.0"
faiss-cpu = "^1.8.0"
fire = "^0.6.0"
typer = "^0.12.3"
lancedb = "^0.6.11"
meilisearch = "^0.31.0"
numpy = "^1.26.4"
openai = "^1.25.2"
openpyxl = "^3.1.2"
beautifulsoup4 = "^4.12.3"
pandas = "^2.2.2"
pydantic = "^2.7.1"
python-docx = "^1.1.2"
pyyaml = "^6.0.1"
setuptools = "^69.5.1"
tenacity = "^8.2.3"
tiktoken = "^0.6.0"
tqdm = "^4.66.4"
typing-inspect = "^0.9.0"
libcst = "^1.3.1"
qdrant-client = "^1.9.1"
ta = "^0.11.0"
wrapt = "^1.16.0"
semantic-kernel = "^0.9.6b1"
aioredis = "^2.0.1"
websocket-client = "^1.8.0"
aiofiles = "^23.2.1"
gitpython = "^3.1.43"
zhipuai = "^2.0.1.20240429"
rich = "^13.7.1"
nbclient = "^0.10.0"
nbformat = "^5.10.4"
ipython = "^8.24.0"
ipykernel = "^6.29.4"
scikit-learn = "^1.4.2"
typing-extensions = "^4.11.0"
socksio = "^1.0.0"
gitignore-parser = "^0.1.11"
websockets = "^12.0"
networkx = "^3.3"
google-generativeai = "^0.5.2"
playwright = "^1.43.0"
anytree = "^2.12.1"
ipywidgets = "^8.1.2"
pillow = "^10.3.0"
imap-tools = "^1.6.0"
qianfan = "^0.3.10"
dashscope = "^1.18.0"
rank-bm25 = "^0.2.2"
gymnasium = "^0.29.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
